--- a/apputveckling/src/main/webapp/views/admin_calendar.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_calendar.xhtml
@@ -6,15 +6,15 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:composition template="/templates/template.xhtml"
-                    xmlns="http://www.w3.org/1999/xhtml"
+    <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                     xmlns:h="http://xmlns.jcp.org/jsf/html"
                     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                    xmlns:f="http://xmlns.jcp.org/jsf/core">
+                    xmlns:f="http://xmlns.jcp.org/jsf/core"
+                    template="/views/template.xhtml">
 
         <ui:define name="content">
-            <h1>"statistics!"</h1>
-            <button onclick="location.href='index.xhtml'">go back to home</button>
+            <h1>"calendar action"</h1>
+            <button onclick="location.href='admin_home.xhtml'">go back to home</button>
         </ui:define>
 
     </ui:composition>
