fixed home page content

--- a/apputveckling/src/main/webapp/views/admin_home.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_home.xhtml
@@ -10,8 +10,7 @@
                     template="/views/template.xhtml">
 
         <ui:define name="content">
-            <h1>"statistics!"</h1>
-            <button onclick="location.href='admin_home.xhtml'">go back to home</button>
+            <ui:include src="../includes/homContent.xhtml"/>
         </ui:define>
 
     </ui:composition>
