fixed home page content

--- a/apputveckling/src/main/webapp/views/admin_home.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_home.xhtml
@@ -10,7 +10,7 @@
                     template="/views/template.xhtml">
 
         <ui:define name="content">
-            <ui:include src="../includes/homContent.xhtml"/>
+            <ui:include src="../includes/homeContent.xhtml"/>
         </ui:define>
 
     </ui:composition>
