--- a/apputveckling/src/main/webapp/views/template.xhtml
+++ b/apputveckling/src/main/webapp/views/template.xhtml
@@ -7,6 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <head>
     <title>My Application</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="#{request.contextPath}/assets/styles.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/bootstrap.min.css"/>
     <script src="#{request.contextPath}/resources/js/bootstrap.bundle.min.js" type=""> </script>
