statistics.js klar

--- a/apputveckling/src/main/webapp/includes/homeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/homeContent.xhtml
@@ -5,6 +5,7 @@
       <div class="col-md-9 order-md-first">
          <h1>Statistics</h1>
          <h:graphicImage styleClass="img-fluid rounded" value="../resources/img/statistics.png"/><br/>
+         <div id="char-div"> </div>
       </div>
       <!-- Right Column -->
       <div class="col-md-3 order-md-last mt-5">
