--- a/apputveckling/src/main/webapp/views/template.xhtml
+++ b/apputveckling/src/main/webapp/views/template.xhtml
@@ -10,7 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="#{request.contextPath}/assets/styles.css"/>
     <link rel="stylesheet" href="#{request.contextPath}/resources/css/bootstrap.min.css"/>
+    <script type="text/javascript" src="https://www.google.com/jsapi"> </script><!-- Google Charts -->
+    <script src="#{request.contextPath}/resources/js/statistics.js" type=""> </script>
     <script src="#{request.contextPath}/resources/js/bootstrap.bundle.min.js" type=""> </script>
+    <script type="text/javascript">
+        google.charts.load('current', {'packages': ['bar']});
+        google.charts.setOnLoadCallback(drawStuff);
+    </script>
     <!-- This previous code didn't import the bootstrap js bundle successfully:
     <h:outputScript library="js" name="bootstrap.bundle.min.js" target="head"/> -->
 </head>
