--- a/apputveckling/src/main/webapp/includes/homeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/homeContent.xhtml
@@ -4,9 +4,9 @@
     <div class="row">
         <div class="col-md-9 order-md-first">
             <h1>Statistics</h1>
-            <div class="block img-fluid card">
+            <div class="card">
                 <!--<h:graphicImage styleClass="img-fluid rounded" value="../resources/img/statistics.png"/><br/>-->
-                <div id="chart-div" styleClass="rounded"> </div>
+                <div id="chart-div" styleClass="img-fluid rounded card-img"> </div>
             </div>
         </div>
         <!-- Right Column -->
