--- a/apputveckling/src/main/webapp/views/admin_calendar.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_calendar.xhtml
@@ -14,6 +14,7 @@
 
         <ui:define name="content">
             <h1>"calendar action"</h1>
+            <ui:include src="../includes/Calendar.xhtml"/>
             <button onclick="location.href='admin_home.xhtml'">go back to home</button>
         </ui:define>
 
