Revert "Merge remote-tracking branch 'origin/PROTOTYPE_1' into PROTOTYPE_1"
This reverts commit cc44474c330616596a21cfe92906ce936b088632, reversing
changes made to 53be3e18e77bc7ec3e3bd4655f11558bd8e5da61.

--- a/apputveckling/src/main/webapp/views/admin_products.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_products.xhtml
@@ -13,8 +13,8 @@
                     template="/views/template.xhtml">
 
         <ui:define name="content">
-            <h1 style="text-align: center;margin-bottom: 30px;">"product list!"</h1>
-            <ui:include src="../includes/productContent.xhtml"/>
+            <h1>"product list!"</h1>
+            <button onclick="location.href='admin_home.xhtml'">go back to home</button>
         </ui:define>
 
     </ui:composition>
