members final changes

--- a/apputveckling/src/main/webapp/views/admin_members.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_members.xhtml
@@ -14,7 +14,7 @@
 
     <ui:define name="content">
 
-        <h1 style="margin-bottom: 15%; padding-bottom: 15%">"member list!"</h1>
+        <h1>Member list</h1>
         <ui:include src="../includes/members.xhtml"> </ui:include>
     </ui:define>
 
