--- a/apputveckling/src/main/webapp/views/admin_members.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_members.xhtml
@@ -6,16 +6,19 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                    xmlns:h="http://xmlns.jcp.org/jsf/html"
-                    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                    xmlns:f="http://xmlns.jcp.org/jsf/core"
-                    template="/views/template.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="/views/template.xhtml">
 
-        <ui:define name="content">
-            <h1>"member list!"</h1>
-            <button onclick="location.href='admin_home.xhtml'">go back to home</button>
-        </ui:define>
+    <ui:define name="content">
+        <h1>"member list!"</h1>
 
-    </ui:composition>
+        <ui:include src="../includes/members.xhtml"/>
+
+
+    </ui:define>
+
+</ui:composition>
 </html>
