--- a/apputveckling/src/main/webapp/includes/productContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/productContent.xhtml
@@ -2,7 +2,7 @@
 
    <div class="container-fluid row menu">
       <div class="card" style="width: 25rem;">
-         <img src="../resources/img/bobmarleyguitarr.jpg" class="card-img-top" alt="..."></img>
+         <img src="../resources/img/guitar3.webp" class="card-img-top" alt="..."></img>
          <div class="card-body">
             <h5 class="card-title">bob marleys guitarr</h5>
             <p class="card-text">spelad av bob marley</p>
@@ -10,7 +10,7 @@
          </div>
       </div>
       <div class="card" style="width: 25rem;">
-         <img src="../resources/img/135317.webp" class="card-img-top" alt="..."></img>
+         <img src="../resources/img/guitar1.webp" class="card-img-top" alt="..."></img>
          <div class="card-body">
             <h5 class="card-title">trä guitarr</h5>
             <p class="card-text">hög kvalite från 1900</p>
@@ -19,7 +19,7 @@
       </div>
 
       <div class="card" style="width: 25rem;">
-         <img src="../resources/img/guitarr2.jpeg" class="card-img-top" alt="something"></img>
+         <img src="../resources/img/guitar2.webp" class="card-img-top" alt="something"></img>
          <div class="card-body">
             <h5 class="card-title">trä guitarr</h5>
             <p class="card-text"> hög kvalite från 1788 </p>
