--- a/apputveckling/src/main/webapp/includes/homeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/homeContent.xhtml
@@ -39,5 +39,8 @@
             <p class="card-text"><strong>Time: </strong>Tomorrow at 2:00 PM</p>
         </div>
     </div>
+    <h:form>
+        <h:commandButton action="#{navigationBean.goToClientHome}" value="Client Home" class="btn btn-primary mt-3"/>
+    </h:form>
 </div>
 
