--- a/apputveckling/src/main/webapp/includes/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/nav_client.xhtml
@@ -1,7 +1,7 @@
-
-<nav class="navbar bg-body-tertiary">
-   <form class="container-fluid justify-content-start">
-      <button class="btn btn-outline-success me-2" type="button">Main button</button>
-      <button class="btn btn-sm btn-outline-secondary" type="button">Smaller button</button>
-   </form>
+<nav class="navbar bg-body-tertiary fixed-top ">
+    <div class="container justify-content-center p-3">
+        <a class="nav-link nav-item p-3 " href="Home.xhtml?bookMeeting"> HOME</a>
+        <a class="nav-link nav-item p-3" href="#"> BOOK</a>
+        <a class="nav-link nav-item p-3" href="Home.xhtml?"> PRODUCT</a>
+    </div>
 </nav>
