--- a/apputveckling/src/main/webapp/includes/cassesContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/cassesContent.xhtml
@@ -97,7 +97,8 @@
 </head>
 <body>
 <div class="search-filter-container">
-   <input type="text" class="search-input" placeholder="Search..."></input>
+   <input type="text" id="search_bar" placeholder="Search id..."/>
+   <button class="search_button">Search</button>
    <button class="filter-button">Filter</button>
    <button class="add-button">Add</button>
 </div>
