repair_field.xhtml, en box om repair

--- a/apputveckling/src/main/webapp/includes/clientHomeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/clientHomeContent.xhtml
@@ -3,7 +3,7 @@
     <div class="row">
         <!-- repeir -->
         <div class="col order-md-first">
-            <div class="card" id="repierBox">
+            <div class="card" id="repairBox">
                 <div class="card-body">
                     <h5 class="card-title">repeir</h5>
                     <p class="card-text">repeir</p>
@@ -20,5 +20,6 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
