--- a/apputveckling/src/main/webapp/views/Home.xhtml
+++ b/apputveckling/src/main/webapp/views/Home.xhtml
@@ -19,6 +19,8 @@
     <ui:include src="../includes/nav_client.xhtml"/>
 
     <ui:include src="../includes/clientHomeContent.xhtml"/>
-    <ui:include src="../includes/productContent.xhtml"></ui:include>
+    <ui:include src="../includes/productContent.xhtml"/>
+    <ui:include src="../includes/repair_field.xhtml"/>
+    <ui:include src="../includes/footer.xhtml"/>
 </h:body>
 </html>
