repair_field.xhtml, en box om repair

--- a/apputveckling/src/main/webapp/includes/clientHomeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/clientHomeContent.xhtml
@@ -1,13 +1,12 @@
 <div class="container-fluid mb-5 " id="HomeClient" style="margin-top: 130px">
 
     <div class="row">
-        <!-- repeir -->
         <div class="col order-md-first">
-            <div class="card" id="repairBox">
+            <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">repeir</h5>
-                    <p class="card-text">repeir</p>
-                    <a href="" class="btn btn-info">more...</a>
+                    <h5 class="card-title">repair</h5>
+                    <p class="card-text">repair</p>
+                    <a href="#repairBox" class="btn btn-info">more...</a>
                 </div>
             </div>
         </div>
@@ -20,6 +19,5 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
