--- a/apputveckling/src/main/webapp/includes/repair_field.xhtml
+++ b/apputveckling/src/main/webapp/includes/repair_field.xhtml
@@ -1,12 +1,18 @@
-<div class="container-fluid">
+<div class="container-fluid m-5" id="repairBox">
    <div class="row">
-      <div class="col-md-12">
+      <div class="col">
          <div class="card">
             <h5 class="card-header">Featured</h5>
             <div class="card-body">
                <h5 class="card-title">Special title treatment</h5>
-               <p class="card-text">sometext or desc about repair</p>
-               <a href="#" class="btn btn-primary">Book</a>
+               <p class="card-text" style="float: left">
+                  Word corruption repair service can be used in situations when word file cannot be successfully opened in Microsoft Word and you see errors or warnings while opening.
+
+                  To repair corrupted doc, docx or rtf file quickly, upload the word document to our cloud recovery service using repair form on this page.
+
+                  It is important to note that if the restore process succeeds you will receive ready-to-use repaired word file as an output of recovery process. You can get fully repaired word document by selecting free or paid option.
+               </p>
+               <a href="#" class="btn btn-dark">Book</a>
             </div>
          </div>
       </div>
