repair_field.xhtml, en box om repair

--- a/apputveckling/src/main/webapp/includes/clientHomeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/clientHomeContent.xhtml
@@ -1,18 +1,20 @@
-<div class="col order-md-first">
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">repair</h5>
-            <p class="card-text">repair</p>
-            <a href="#repairBox" class="btn btn-info">more...</a>
+<div class="row m-5">
+    <div class="col order-md-first">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">repair</h5>
+                <p class="card-text">repair</p>
+                <a href="#repairBox" class="btn btn-info">more...</a>
+            </div>
         </div>
     </div>
-</div>
-<div class="col order-md-last">
-<div class="card" id="bookMeeting">
-    <div class="card-body">
-        <h5 class="card-title">Meeting</h5>
-        <p class="card-text">Meeting</p>
-        <a href="" class="btn btn-info">more...</a>
+    <div class="col order-md-last">
+        <div class="card" id="bookMeeting">
+            <div class="card-body">
+                <h5 class="card-title">Meeting</h5>
+                <p class="card-text">Meeting</p>
+                <a href="" class="btn btn-info">more...</a>
+            </div>
+        </div>
     </div>
-</div>
 </div>
