--- a/apputveckling/src/main/webapp/includes/homeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/homeContent.xhtml
@@ -6,7 +6,7 @@
             <h1>Statistics</h1>
             <div class="card">
                 <!--<h:graphicImage styleClass="img-fluid rounded" value="../resources/img/statistics.png"/><br/>-->
-                <div id="chart-div" styleClass="img-fluid rounded card-img"></div>
+                <div id="chart-div" styleClass="img-fluid rounded card-img"> </div>
             </div>
 
         </div>
@@ -39,8 +39,6 @@
             <p class="card-text"><strong>Time: </strong>Tomorrow at 2:00 PM</p>
         </div>
     </div>
-    <h:form>
-        <h:commandButton action="#{navigationBean.goToClientHome}" value="Client Home" class="btn btn-primary mt-3"/>
-    </h:form>
+    <button type="button" class="btn btn-primary btn-lg btn-block mt-3" onclick="window.location.href='client/Home.xhtml'" >Cleint page</button>
 </div>
 
