client navbar,fixed lagt till footer.xhtml

--- a/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
@@ -1,7 +1,7 @@
 <nav class="navbar bg-body-tertiary fixed-top ">
     <div class="container justify-content-center p-3">
-        <a class="nav-link nav-item p-3 " href="Home.xhtml?bookMeeting"> HOME</a>
+        <a class="nav-link nav-item p-3 " href="home.xhtml?bookMeeting"> HOME</a>
         <a class="nav-link nav-item p-3" href="#"> BOOK</a>
-        <a class="nav-link nav-item p-3" href="Home.xhtml?"> PRODUCT</a>
+        <a class="nav-link nav-item p-3" href="home.xhtml?"> PRODUCT</a>
     </div>
 </nav>
