--- a/apputveckling/src/main/webapp/includes/homeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/homeContent.xhtml
@@ -39,6 +39,6 @@
             <p class="card-text"><strong>Time: </strong>Tomorrow at 2:00 PM</p>
         </div>
     </div>
-    <button type="button" class="btn btn-primary btn-lg btn-block mt-3" onclick="window.location.href='client/Home.xhtml'" >Cleint page</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block mt-3" onclick="window.location.href='client/home.xhtml'" >Client page</button>
 </div>
 
