--- a/apputveckling/src/main/webapp/views/client/product.xhtml
+++ b/apputveckling/src/main/webapp/views/client/product.xhtml
@@ -5,7 +5,22 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+<h:head>
+    <title>My Application</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+    <link rel="stylesheet" href="#{request.contextPath}/assets/styles.css"/>
+    <link rel="stylesheet" href="#{request.contextPath}/assets/client.css"/>
+    <link rel="stylesheet" href="#{request.contextPath}/resources/css/bootstrap.min.css"/>
+    <script type="text/javascript" src="https://www.google.com/jsapi"> </script><!-- Google Charts -->
+    <script src="#{request.contextPath}/resources/js/statistics.js" type=""> </script>
+    <script src="#{request.contextPath}/resources/js/bootstrap.bundle.min.js" type=""> </script>
+</h:head>
+<h:body>
+    <div class="container-fluid mb-5 " id="HomeClient" style="margin-top: 130px">
+        <ui:include src="../../includes/client_inc/nav_client.xhtml"/>
+        <ui:include src="../../includes/client_inc/repair_field.xhtml"/>
+    </div>
+    <ui:include src="../../includes/client_inc/footer.xhtml"/>
+</h:body>
 </html>
+
