--- a/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
@@ -12,9 +12,9 @@
             />
         </h:form>
         <h:form>
-            <h:commandButton action="#{navigationBean.goToClientBook}"
-                             styleClass="#{navigationBean.selectedSection eq 'book' ? 'nav-link nav-item p-3 myactive':'nav-link nav-item p-3'}"
-                             value="Book"
+            <h:commandButton action="#{navigationBean.goToClientReserve}"
+                             styleClass="#{navigationBean.selectedSection eq 'Reserve' ? 'nav-link nav-item p-3 myactive':'nav-link nav-item p-3'}"
+                             value="Make an appointment"
             />
         </h:form>
     </div>
