--- a/apputveckling/src/main/webapp/includes/client_inc/autoplayingSlide.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/autoplayingSlide.xhtml
@@ -1,21 +1,21 @@
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner" style="height: 100px">
+<div id="homeAutoplaying" class="carousel slide shadow" data-bs-ride="carousel">
+    <div class="carousel-inner" style="max-height: 220px" >
         <div class="carousel-item active">
-            <img src="#{request.contextPath}/resources/img/guitar1.webp" class="d-block w-100" alt="..."/>
+            <img src="#{request.contextPath}/resources/img/repair.jpg" class="d-block w-100" alt="..."/>
         </div>
         <div class="carousel-item">
-            <img src="#{request.contextPath}/resources/img/guitar2.webp" class="d-block w-100" alt="..."/>
+            <img src="#{request.contextPath}/resources/img/buy.jpg" class="d-block w-100 " alt="..."/>
         </div>
         <div class="carousel-item">
-            <img src="#{request.contextPath}/resources/img/guitar3.webp" class="d-block w-100" alt="..."/>
+            <img src="#{request.contextPath}/resources/img/konsultation.jpg" class="d-block w-100" alt="..."/>
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+    <button class="carousel-control-prev" type="button" data-bs-target="#homeAutoplaying"
             data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+    <button class="carousel-control-next" type="button" data-bs-target="#homeAutoplaying"
             data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
