--- a/apputveckling/src/main/webapp/views/client/home.xhtml
+++ b/apputveckling/src/main/webapp/views/client/home.xhtml
@@ -17,9 +17,8 @@
 </h:head>
 <h:body>
     <ui:include src="../../includes/client_inc/nav_client.xhtml"/>
-    <div class="container-fluid mb-5 " id="HomeClient" style="margin-top: 130px">
-
-
+    <div class="" id="HomeClient" style="margin-top: 130px">
+        <ui:include src="../../includes/client_inc/autoplayingSlide.xhtml"/>
         <ui:include src="../../includes/client_inc/clientHomeContent.xhtml"/>
 
         <ui:include src="../../includes/client_inc/repair_field.xhtml"/>
