class Product, hårdkodat ProductsBean så länge

--- a/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-tertiary fixed-top " xmlns:h="http://java.sun.com/jsf/html">
+<nav class="navbar bg-dark text-white fixed-top " xmlns:h="http://java.sun.com/jsf/html">
     <div class="container justify-content-center p-3">
         <h:form>
             <h:commandButton value="HOME"
