--- a/apputveckling/src/main/webapp/assets/client.css
+++ b/apputveckling/src/main/webapp/assets/client.css
@@ -1,23 +1,14 @@
 .myactive{
-    background-color: #f5f5f5;
-    color: #555;
-    border-left: 3px solid #337ab7;
-    border-right: 3px solid #337ab7;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px 0 #ccc;
-    -webkit-box-shadow: 0 0 5px 0 #ccc;
-    -moz-box-shadow: 0 0 5px 0 #ccc;
-    -o-box-shadow: 0 0 5px 0 #ccc;
-    -ms-box-shadow: 0 0px 5px 0 #ccc;
-    -khtml-box-shadow: 0 0 5px 0 #ccc;
+    text-decoration-line: underline;
+    text-underline-position: under;
+    text-underline-color: white;
+    text-decoration-thickness: 20px;
 }
 .nav-link.nav-item.p-3:hover {
     text-decoration-line: underline;
-    text-underline-color: black;
+    text-underline-position: under;
+    text-underline-color: white;
+    text-decoration-thickness: 20px;
 }
 
 
