--- a/apputveckling/src/main/webapp/includes/client_inc/footer.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/footer.xhtml
@@ -1,4 +1,4 @@
-<footer class="footer modal-footer bg-light">
+<footer class="footer modal-footer bg-dark text-white">
     <div class="container m-5">
         <div class="row">
             <div class="col-md-4">
