--- a/apputveckling/src/main/webapp/views/client/product.xhtml
+++ b/apputveckling/src/main/webapp/views/client/product.xhtml
@@ -16,8 +16,9 @@
     <script src="#{request.contextPath}/resources/js/bootstrap.bundle.min.js" type=""> </script>
 </h:head>
 <h:body>
-    <div class="container-fluid mb-5 " id="HomeClient" style="margin-top: 130px">
+    <div class="" id="HomeClient" style="margin-top: 130px">
         <ui:include src="../../includes/client_inc/nav_client.xhtml"/>
+        <ui:include src="../../includes/client_inc/productClient.xhtml"/>
         <ui:include src="../../includes/client_inc/repair_field.xhtml"/>
     </div>
     <ui:include src="../../includes/client_inc/footer.xhtml"/>
