--- a/apputveckling/src/main/webapp/views/client/product.xhtml
+++ b/apputveckling/src/main/webapp/views/client/product.xhtml
@@ -18,6 +18,7 @@
 <h:body>
     <div class="" id="HomeClient" style="margin-top: 130px">
         <ui:include src="../../includes/client_inc/nav_client.xhtml"/>
+        <ui:include src="../../includes/client_inc/productDetails.xhtml"/>
         <ui:include src="../../includes/client_inc/productClient.xhtml"/>
         <ui:include src="../../includes/client_inc/repair_field.xhtml"/>
     </div>
