hamburger menu(member, case)

--- a/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
@@ -24,11 +24,11 @@
             <span class="navbar-toggler-icon"/>
         </button>
         <!-- Right Side Of Navbar
-         TODO: fix it to work when menu is clicked!-->
+         TODO: fix it, when menu is clicked->show this!-->
         <div class="collapse navbar-collapse" id="navbarNavRight">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">Bli Medlem</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
