--- a/apputveckling/src/main/webapp/assets/styles.css
+++ b/apputveckling/src/main/webapp/assets/styles.css
@@ -7,6 +7,11 @@
     width: 30%;
     border-radius: 12px;
 }
+.custom-input{
+    margin-bottom: 1%;
+    width: 30%;
+    border-radius: 12px;
+}
 
 .Medlemmar{
     position: absolute;
