--- a/apputveckling/src/main/webapp/views/admin_clients.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_clients.xhtml
@@ -10,11 +10,13 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:p="http://primefaces.org/ui"
                 template="/views/template.xhtml">
 
     <ui:define name="content">
-        <h1>Member list</h1>
-        <ui:include src="../includes/members.xhtml"> </ui:include>
+        <h1>Client list</h1>
+        <ui:include src="../includes/clients.xhtml"> </ui:include>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" type=""> </script>
     </ui:define>
 
 </ui:composition>
