get client data from database and show in page rename Members to Clients Co-authored-by: isaac1209 <amthelion68@gmail.com>

--- a/apputveckling/src/main/webapp/views/nav-items.xhtml
+++ b/apputveckling/src/main/webapp/views/nav-items.xhtml
@@ -20,8 +20,8 @@
     </li>
     <li class="nav-item">
         <h:form>
-            <h:commandLink styleClass="nav-link text-white" action="#{navigationBean.goToMembers()}"
-                           value="Members"/>
+            <h:commandLink styleClass="nav-link text-white" action="#{navigationBean.goToClients()}"
+                           value="Clients"/>
         </h:form>
     </li>
     <li class="nav-item">
