--- a/apputveckling/src/main/webapp/includes/client_inc/productClient.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/productClient.xhtml
@@ -6,7 +6,7 @@
         <h1>#{productBean.products.size()}</h1>
         <ui:repeat value="#{productBean.products}" var="product">
             <div class="col-md-2 m-3 card" style="width: 300px">
-                <img src="#{request.contextPath}/resources/img/BobMarley.JPG" class="card-img-top" alt="..."/>
+                <img src="#{request.contextPath}/resources/img/#{productImagesBean.getOneImage(product.PRODUCT_ID)}" class="card-img-top" alt="..."/>
                 <h4 class="card-title">#{product.PRODUCT_NAME}</h4>
                 <h5 class="card-title">Price: #{product.PRODUCT_PRICE}</h5>
                 <h:form>
