--- a/apputveckling/src/main/webapp/includes/client_inc/productDetails.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/productDetails.xhtml
@@ -1,19 +1,19 @@
 <div xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html" >
-    <div class="#{productsBean.isShowProductDetails eq 'true' ? 'card m-5' : 'hidden'}">
-        <ui:repeat value="#{productsBean.productsDetails}" var="item">
+    <div class="#{productBean.isShowProductDetails eq 'true' ? 'card m-5' : 'hidden'}">
+        <ui:repeat value="#{productBean.productsDetails}" var="item">
             <div class="row">
                 <div class="col-md-6">
                     <!-- Bootstrap Carousel for Image Slider -->
                     <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                            <ui:repeat value="#{item.images}" var="image" varStatus="status">
+                            <ui:repeat value="#{productImagesBean.productImages}" var="image" varStatus="status">
                                 <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="#{status.index}" class="#{status.index eq 0 ? 'active' : ''}" aria-current="#{status.index eq 0 ? 'true' : 'false'}" aria-label="Slide #{status.index}" />
                             </ui:repeat>
                         </div>
                         <div class="carousel-inner">
-                            <ui:repeat value="#{item.images}" var="image" varStatus="status">
+                            <ui:repeat value="#{productImagesBean.productImages}" var="image" varStatus="status">
                                 <div class="carousel-item #{status.index eq 0 ? 'active' : ''}">
-                                    <img style="max-height: 400px; cursor: pointer;" src="#{request.contextPath}/resources/img/#{image}" alt="#{item.name}" class="d-block w-100 img-fluid" data-bs-toggle="modal" data-bs-target="#imageModal"/>
+                                    <img style="max-height: 400px; cursor: pointer;" src="#{image.imgPathString}" alt="#{item.PRODUCT_NAME}" class="d-block w-100 img-fluid" data-bs-toggle="modal" data-bs-target="#imageModal"/>
                                 </div>
                             </ui:repeat>
                         </div>
@@ -28,11 +28,11 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <h1>#{item.name}</h1>
-                    <h2>#{item.price}</h2>
-                    <h3>#{item.description}</h3>
-                    <h4>#{item.category}</h4>
-                    <p>#{item.history}</p>
+                    <h1>#{item.PRODUCT_NAME}</h1>
+                    <h2>#{item.PRODUCT_MAIN_DESC}</h2>
+                    <h3>#{item.PRODUCT_HISTORY_DESC}</h3>
+                    <h4>#{item.PRODUCT_YEAR}</h4>
+                    <p>#{item.PRODUCT_PRICE}</p>
                     <h:form>
                         <h:commandButton value="Reserve" class="btn btn-primary"/>
                     </h:form>
