--- a/apputveckling/src/main/webapp/assets/styles.css
+++ b/apputveckling/src/main/webapp/assets/styles.css
@@ -6,8 +6,7 @@
 }
 
 .Medlemmar{
-    position: absolute;
-    width: 90%;
+
     top: 50%;
     height: 5%;
 }
@@ -20,7 +19,7 @@
 }
 .history_list{
     position: relative;
-    max-height: 55%;
+    max-height: 60%;
     overflow-y: auto;
 
 }
@@ -37,13 +36,10 @@
 
 .history_div{
 
-    position: absolute;
+
     margin-top: 2%;
-    padding: 2%;
-    right: 6%;
     top: 5%;
-    width: 80%;
-    height: 45%;
+    height: 300px;
     border-radius: 25px;
     box-shadow: 2px 2px 5px #808080;
 
@@ -69,4 +65,6 @@
     text-align: center;
     margin: auto;
 }
+
+
 
